--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<html>
-    <head>
-    
-    </head>
-    <body>
-        index
-    </body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link type="text/css" rel="stylesheet" href="." />
+    <link type="text/css" rel="stylesheet" href="." />
+    <title>QSP: Как сделать?</title>
+</head>
+<body>
+    <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "Как сделать?" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
+</body>
 </html>
