--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "Как сделать?" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
+    <p>Скоро здесь будет текст.</p>
 </body>
 </html>
