--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link id="favicon" rel="icon" type="image/x-icon" href="/res/favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="." />
-    <link type="text/css" rel="stylesheet" href="." />
+    <link type="text/css" rel="stylesheet" href="/res/css/easy.library.css" />
+    <link type="text/css" rel="stylesheet" href="/res/css/offline.window.css" />
     <title>QSP: Как сделать?</title>
 </head>
 <body>
