--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link id="favicon" rel="icon" type="image/x-icon" href="/res/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="/res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="/res/css/offline.window.css" />
+    <link type="text/css" rel="stylesheet" href="/res/css/qsp_code.css" />
     <title>QSP: Как сделать?</title>
 </head>
 <body>
@@ -12,11 +13,11 @@
     <div class="em_AROUND">
         <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="http://qsp.su/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
         <div class="em_Warning">
-            Внимание!!! В данной версии руководства присутствуют неточности в определениях чисел. Временами рациональные, вещественные и натуральные числа перепутаны и называются неправильно. Если вы математик, вы должны испытывать справедливый гнев. Сам знаю, это кощунство. Постараюсь исправить. Если нашли ошибку в определениях, сообщите адрес страницы, заголовок, под которым расположено неверное определение числа и, желательно, фрагмент текста. Заранее благодарен и прошу прощения.
+            Предупреждение!!!
         </div>
         <div class="em_Epigraph">
             <div>
-                <p>Библиотека разрабатывалась для плееров версий QSP 5.7.0 - это классический плеер версии 5.7.0, плеер от Seedhartha для Android до версии 2.3.1, а так же Quest Navigator версии 0.0.28. Не гарантируется правильная работа на плеерах иных версий. Некоторые функции имеют ограничения на значение числовых аргументов, это связано с используемыми плеером библиотеками. Для разных версий плеера могут быть разные ограничения, поэтому внимательно читайте документацию к плееру, под который разрабатываете игру.</p>
+                <p>Здесь будет текст</p>
                 <p>По всем вопросам и предложениям обращаться:</p>
                 <ul class="em_TT">
                     <li>e-mails:                  
@@ -27,7 +28,6 @@
                     </li>
                     <li>Вконтакте: <a href="https://vk.com/id40090736" class="emHREFHH" target="_blank">id40090736</a></li>
                 </ul>
-                <p style="margin-left:-1.5em;">Изначально создавалась для обеспечения нужд игры МАГИКОН.</p>
             </div>
         </div>
         <div class="em_PAGE">
