--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="em_AROUND">
         <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="http://qsp.su/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
         <div class="em_Warning">
-            Предупреждение!!!
+            <p>Внимание!!! Данная страница не относится к справочнику по самым часто задаваемым вопросам из темы "Как сделать?". Это просто страница-заглушка, подтянутая из мануала для Easy Math. Справочник будет создан позже. Пока что вы можете скачать офлайн-версию справочника:</p>
+            <p><a href="FAQ.QSP.2020.08.24.fb2">Скачать офлайн-справочник</a></p>
         </div>
         <div class="em_Epigraph">
             <div>
@@ -44,10 +45,10 @@
                         </p>
                     </li>
                     <li>
-                        <p>В своей игре на самой первой локации, в поле "выполнить при посещении" введите
-                        <p class="em_CODE"><span class="emOPRT">addqst</span> <span class="emTEXT">'lib\easy.math.qsp'</span></p>
+                        <p>В своей игре на самой первой локации, в поле "выполнить при посещении" введите</p>
+                        <div class="Monokai-Code"><span class="Monokai-Operator">addqst</span> <span class="Monokai-String">'lib\easy.math.qsp'</span></div>
                         <p>Если планируется использование библиотеки в играх на Quest Navigator необходимо так же прописать такую строку:</p>
-                        <p class="em_CODE">$AVS_PLAYERTYPE<span class="emOPRT">=</span><span class="emTEXT">'QN'</span></p>
+                        <div class="Monokai-Code">$AVS_PLAYERTYPE<span class="Monokai-Assign">=</span><span class="Monokai-String">'QN'</span></div>
                     </li>
                     <li>
                         <p>теперь Вы можете пользоваться функциями библиотеки.</p>
