--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="em_Epigraph">
             <div class="em_subText">
                 <p>Aleks Versus'Easy Libraries'2013-2021</p>
-                <p>Aleks Versus'Game Adventure Making'Really Unimaginable Stories'2013-2021</p>
+                <p>Aleks Versus'Game Adventure Making'Really Unimaginable Stories'2013-<span id="date_stamp">2021</span></p>
             </div>
         </div>
     </div>
