--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link id="favicon" rel="icon" type="image/x-icon" href="/res/favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="/res/css/easy.library.css" />
-    <link type="text/css" rel="stylesheet" href="/res/css/offline.window.css" />
-    <link type="text/css" rel="stylesheet" href="/res/css/qsp_code.css" />
+    <link id="favicon" rel="icon" type="image/x-icon" href="./res/favicon.ico" />
+    <link type="text/css" rel="stylesheet" href="./res/css/easy.library.css" />
+    <link type="text/css" rel="stylesheet" href="./res/css/offline.window.css" />
+    <link type="text/css" rel="stylesheet" href="./res/css/qsp_code.css" />
     <title>QSP: Как сделать?</title>
 </head>
 <body>
