Начало работы над распарсиванием блоков кода

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
         </div>
    
-Обработка локации, посещение локации — под этими терминами понимаются следующие процессы: выполнение кода из поля "Выполнить при
- <span class="em_BLCK">&amp;</span> посещении" указанной &lt;локации&gt;, добавление <span class="em_BLCK">mass<span class="emOPRT">[</span><span class="emTEXT">"35,56"</span><span class="emOPRT">]</span></span> в окно основного описания. <span class="em_BLCK"><span class="emOPRT">goto</span></span> <span class="em_BLCK"><span class="emOPRT">xgoto</span></span> Всякое такое. <a href="#folder#00000000.html#faq_01_08"><span class="emFOLD">"Разница между <span class="em_BLCK"><span class="emOPRT">goto</span></span> и <span class="em_BLCK"><span class="emOPRT">gosub</span></span>"</span></a>. Спасибо Nexу. Larsonу.
+<strong>Обработка локации</strong>, <strong>посещение локации</strong> — под этими терминами понимаются следующие процессы: выполнение кода из поля "Выполнить при
+ <span class="em_BLCK"><span class="emOPRT">&amp;</span></span> посещении" указанной &lt;локации&gt;, добавление <span class="em_BLCK">mass<span class="emOPRT">[</span><span class="emTEXT">"35,56"</span><span class="emOPRT">]</span></span> в окно основного описания. <span class="em_BLCK"><span class="emOPRT">goto</span></span> <span class="em_BLCK"><span class="emOPRT">xgoto</span></span> Всякое такое. <a href="#folder#00000000.html#faq_01_08" style="text-decoration:none;" class="emFOLD">"Разница между <span class="em_BLCK"><span class="emOPRT">goto</span></span> и <span class="em_BLCK"><span class="emOPRT">gosub</span></span>"</a>. Спасибо <strong>Nex</strong>'у. <strong>Larson</strong>'у.
         
         <div class="em_Epigraph">
             <div class="em_subText">
