Подготовлен генератор подсветки кода.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,29 @@
             </div>
         </div>
    
-<strong>Обработка локации</strong>, <strong>посещение локации</strong> — под этими терминами понимаются следующие процессы: выполнение кода из поля "Выполнить при
- <span class="em_BLCK"><span class="emOPRT">&amp;</span></span> посещении" указанной &lt;локации&gt;, добавление <span class="em_BLCK">mass<span class="emOPRT">[</span><span class="emTEXT">"35,56"</span><span class="emOPRT">]</span></span> в окно основного описания. <span class="em_BLCK"><span class="emOPRT">goto</span></span> <span class="em_BLCK"><span class="emOPRT">xgoto</span></span> Всякое такое. <a href="#folder#00000000.html#faq_01_08" style="text-decoration:none;" class="emFOLD">"Разница между <span class="em_BLCK"><span class="emOPRT">goto</span></span> и <span class="em_BLCK"><span class="emOPRT">gosub</span></span>"</a>. Спасибо <strong>Nex</strong>'у. <strong>Larson</strong>'у.
+<div class="Monokai-Code">
+    ТЕСТ ГЕНЕРАЦИИ ПОДСВЕТКИ КОДА ДЛЯ HTML - ПРЕКРАСНО РАБОТАЕТ, КАК МОЖНО ВИДЕТЬ
+    
+    <br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-StartLoc">#&nbsp;начало</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Koperator">if</span>&nbsp;ваза_на_столе<span class="Monokai-Operator">=</span><span class="Monokai-Numeric">1</span><span class="Monokai-Operator">:</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Comment">!&nbsp;раз&nbsp;два&nbsp;три{&nbsp;четыре&nbsp;"&nbsp;пять&nbsp;шесть&nbsp;семь&nbsp;восемь<br>
+&nbsp;&nbsp;&nbsp;&nbsp;девять&nbsp;десять&nbsp;одиннадцать&nbsp;двенадцать<br>
+&nbsp;&nbsp;&nbsp;&nbsp;тринадцать&nbsp;четырнадцать&nbsp;"&nbsp;пятнадцать}&nbsp;шестн'адцать<br>
+&nbsp;&nbsp;&nbsp;&nbsp;привет&nbsp;привет&nbsp;'&nbsp;привет&nbsp;привет&nbsp;</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Comment">!&nbsp;если&nbsp;переменная-маркер&nbsp;ваза_на_столе&nbsp;равна&nbsp;1&nbsp;</span><br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Comment">!&nbsp;создаём&nbsp;действие&nbsp;</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Koperator">act</span>&nbsp;<span class="Monokai-String">"Взять&nbsp;вазу&nbsp;со&nbsp;стола"</span><span class="Monokai-Operator">:</span>&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Comment">!&nbsp;в&nbsp;действии&nbsp;изменяем&nbsp;значение&nbsp;переменной-маркера&nbsp;</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ваза_на_столе<span class="Monokai-Operator">=</span><span class="Monokai-Numeric">0</span>&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Operator">addobj</span>&nbsp;<span class="Monokai-String">"Ваза"</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-UnFunc">@foo</span><span class="Monokai-Operator">(</span><span class="Monokai-SysVar">args</span><span class="Monokai-Operator">[</span><span class="Monokai-Numeric">123</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">,</span><span class="Monokai-SysVar">args</span><span class="Monokai-Operator">[</span><span class="Monokai-String">'truaya'</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">)</span>&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Operator">goto</span>&nbsp;<span class="Monokai-Func">$curloc</span>&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Koperator">end</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Koperator">end</span><br>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-EndLoc">---&nbsp;начало&nbsp;------</span><br>
+        </div>
         
         <div class="em_Epigraph">
             <div class="em_subText">
