Исправил ошибку потери последнего li в списках.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,205 @@
 &nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Koperator">end</span><br>
 &nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-EndLoc">---&nbsp;начало&nbsp;------</span><br>
         </div>
+
+<!-- test list-->
+<ul>
+
+<li>
+
+маркированный список пункт первый(1)
+
+</li>
+
+<li>
+
+маркированный список пункт второй(2)
+
+<br>доп. строка в списке(3)
+
+</li>
+
+<li>
+
+маркированный список пункт третий(4)
+
+<ul>
+
+<li>
+
+вложенный(5)
+
+</li>
+
+<li>
+
+вложенный(6)
+
+</li>
+
+<li>
+
+вложенный(7)
+
+<ul>
+
+<li>
+
+третий уровень(8)
+
+</li>
+
+<li>
+
+третий уровень(9)
+
+</li>
+
+</ul>
+
+</li>
+
+<li>
+
+вложенный(10)
+
+</li>
+
+</ul>
+
+</li>
+
+<li>
+
+маркированный список пункт четвёртый(11)
+
+<ol>
+
+<li>
+
+нумерованный один(12)
+
+</li>
+
+<li>
+
+нумерованный два(13)
+
+<ol>
+
+<li>
+
+нумерованный вложенный(14)
+
+</li>
+
+<li>
+
+нумерованнный вложенный(15)
+
+<ul>
+
+<li>
+
+ещё(1)(16)
+
+</li>
+
+<li>
+
+еще(17)
+
+</li>
+
+</ul>
+
+</li>
+
+</ol>
+
+</li>
+
+</ol>
+
+</li>
+
+<li>
+
+маркированный список пункт пятый(18)
+
+</li>
+
+<li>
+
+шестой(19)
+
+</li>
+
+</ul>
+
+<ol>
+
+<li>
+
+нумерованный внешний(20)
+
+</li>
+
+<li>
+
+нумерованный внешний(21)
+
+<br>это строка, примыкающая к пункту списка(22)
+
+<ul>
+
+<li>
+
+здесь встроен(23)
+
+</li>
+
+<li>
+
+вложенный список(24)
+
+<br>	строка во втором вложенного(25)
+
+</li>
+
+</ul>
+
+ещё одна строка, примыкающая ко второму(26)
+
+<br>пункту списка и ещё одна(27)
+
+<ol>
+
+<li>
+
+И ещё один(28)
+
+</li>
+
+<li>
+
+Вложенный список.(29)
+
+</li>
+
+</ol>
+
+</li>
+
+<li>
+
+нумерованный внешний(30)
+
+</li>
+
+</ol>
+<!-- test list-->
+        
         
         <div class="em_Epigraph">
             <div class="em_subText">
