--- a/ответы/92_дополнительные тексты/02_start.html
+++ b/ответы/92_дополнительные тексты/02_start.html
@@ -9,7 +9,10 @@
     <title>QSP: Как сделать?</title>
 </head>
 <body>
-    
-    <div class="em_AROUND">
-        <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="http://qsp.su/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
-        <!-- body start -->
+    <div class="em_Main">
+        <div class="soderzhanije">
+<header-header></header-header>
+        </div>
+        <div class="em_AROUND">
+            <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="http://qsp.su/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
+            <!-- body start -->
