--- a/ответы/92_дополнительные тексты/03_end.html
+++ b/ответы/92_дополнительные тексты/03_end.html
@@ -1,11 +1,11 @@
-        <!-- body end -->
-        <div class="em_Epigraph">
-            <div class="em_subText">
-                <p>Aleks Versus'HowDo-F.A.Q.'2013-2021</p>
-                <p>Aleks Versus'Game Adventure Making'Really Unimaginable Stories'2013-<span id="date_stamp">2021</span></p>
+<!-- body end -->
+            <div class="em_Epigraph">
+                <div class="em_subText">
+                    <p>Aleks Versus'HowDo-F.A.Q.'2013-2021</p>
+                    <p>Aleks Versus'Game Adventure Making'Really Unimaginable Stories'2013-<span id="date_stamp">2021</span></p>
+                </div>
             </div>
         </div>
     </div>
-
 </body>
 </html>
