--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <title>QSP: Как сделать?</title>
 </head>
 <body>
-    
+ <style type="text/css">
+     .cmd > li:hover {
+         background: #ffffff11;
+         transition: background 1s easy-in-out 1s;
+     }
+     .cmd > li {
+         background: #00000000;
+     }
+    </style>   
 <div class="em_Main">
     <div class="em_AROUND">
         <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="http://qsp.su/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
@@ -18,14 +26,14 @@
             <p>За исключением данной страницы весь справочник генерируется из исходников, поэтому возможны огрехи и разные некрасивости. По мере необходимости и возможности я буду эти огрехи устранять.</p>
             <p>Скачать последнюю версию офлайн-справочника вы всегда можете со страницы релизов:</p>
             <p>
-                <a href="https://github.com/AleksVersus/howdo_faq/releases" style="text-decoration: none;"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"GitHub/HowDo_FAQ/releases"</span></a>
+                <a href="https://github.com/AleksVersus/howdo_faq/releases" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"GitHub/HowDo_FAQ/releases"</span></a>
             </p>
             <p>Как только вы перейдёте к первой странице справочника, слева появится содержание со всеми разделами. Так же Содержание всегда доступно на отдельной странице по ссылке внизу.</p>
             <p>Если вы нашли какую-либо ошибку или неточность, просьба заскринить её вместе с адресом страницы и выслать мне на <span class="Monokai-UnFunc">aleksversus@mail.ru</span>. Это поможет улучшению и исправлению справочника.</p>
             <p>Ещё вы можете написать мне в VK, это не возбраняется: <a href="https://vk.com/id40090736" style="text-decoration: none;" target="_blank"><span class="Monokai-Numeric">id40090736</span></a>.</p>
             <p>Подсветка блоков кода CSS, JS и HTML пока не сделана, код в этих блоках будет подсвечен неправильно. В остальном же всё должно работать.</p>
             <h6><span class="Monokai-Func">Перейти к справочнику:</span></h6>
-            <ul>
+            <ul class="cmd">
                 <li>
                 <a href="https://aleksversus.github.io/howdo_faq/pages/00000000.html" style="text-decoration: none;"><span class="Monokai-Operator">jump</span> <span class="Monokai-String">"Важное предисловие"</span></a>
                 </li>
@@ -35,9 +43,18 @@
                 <li>
                 <a href="https://aleksversus.github.io/howdo_faq/pages/00000173.html" style="text-decoration: none;"><span class="Monokai-Operator">jump</span> <span class="Monokai-String">"Зарезервированные слова, спецсимволы и системные переменные"</span></a>
                 </li>
+                <li>
+                <a href="https://aleksversus.github.io/howdo_faq/pages/00000179.html" style="text-decoration: none;"><span class="Monokai-Operator">jump</span> <span class="Monokai-String">"Источники и дополнительные материалы"</span></a>
+                </li>
+            </ul>
+            <h6><span class="Monokai-Func">Дополнительно:</span></h6>
+            <ul class="cmd">
+                <li><a href="http://qsp.su/index.php?option=com_agora&task=topic&id=1280&p=1&prc=25&Itemid=57#p28373" style="text-decoration: none;" target="_blank"><span class="Monokai-Comment">! тема, посвящённая справочнику, на форуме QSP.su:</span><br>
+                <span class="Monokai-Operator">goto</span> <span class="Monokai-String">"qsp.su/F.A.Q.: Часто задаваемые вопросы из темы "Как сделать?""</span></a>
+                </li>
             </ul>
             <h6><span class="Monokai-Func">Мои ресурсы:</span></h6>
-            <ul>
+            <ul class="cmd">
                 <li>
                 <a href="http://aleksversus.narod.ru" style="text-decoration: none;" target="_blank" title="Открыть в новой вкладке"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"aleksversus.narod.ru"</span> <span class="Monokai-Operator">&amp;</span> <span class="Monokai-Comment">! мой сайт</span></a>
                 </li>
