--- a/ответы/92_дополнительные тексты/02_start.html
+++ b/ответы/92_дополнительные тексты/02_start.html
@@ -2,12 +2,13 @@
 <html lang="ru">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link id="favicon" rel="icon" type="image/x-icon" href="./res/favicon.ico" />
+    <link id="favicon" rel="icon" type="image/x-icon" href="../res/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
     <title>QSP: Как сделать?</title>
 </head>
+    
 <body>
     <div class="em_Main">
         <div class="soderzhanije">
