--- a/ответы/92_дополнительные тексты/03_end.html
+++ b/ответы/92_дополнительные тексты/03_end.html
@@ -14,6 +14,9 @@
                 </div>
             </div>
         </div>
+        <div class="stub">
+            &nbsp;
+        </div>
     </div>
 </body>
 </html>
