Добавлены ссылки на статьи

--- a/index.html
+++ b/index.html
@@ -40,8 +40,19 @@
             </ul>
             <h6><span class="Monokai-Func">Дополнительно:</span></h6>
             <ul class="cmd">
-                <li><a href="http://qsp.su/index.php?option=com_agora&task=topic&id=1280&p=1&prc=25&Itemid=57#p28373" style="text-decoration: none;" target="_blank"><span class="Monokai-Comment">! тема, посвящённая справочнику, на форуме QSP.su:</span><br>
+                <li><a href="http://qsp.su/index.php?option=com_agora&task=topic&id=1280&p=1&prc=25&Itemid=57#p28373" style="text-decoration: none;" target="_blank"><span class="Monokai-Comment">! Тема, посвящённая справочнику, на форуме QSP.su:</span><br>
                 <span class="Monokai-Operator">goto</span> <span class="Monokai-String">"qsp.su/F.A.Q.: Часто задаваемые вопросы из темы "Как сделать?""</span></a>
+                </li>
+                <li><span class="Monokai-Comment">! Статья о преобразовании типов в QSP:</span><br>
+                <a href="https://vk.com/@qsplayer-preobrazovanie-tipov-v-qsp" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"vk.com/Преобразование типов в QSP"</span></a><br>
+                <a href="https://aleksversus.medium.com/преобразование-типов-в-qsp-8eec585f93e2" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"medium.com/Преобразование типов в QSP"</span></a>
+                </li>
+                <li><span class="Monokai-Comment">! Статья об изменении работы массивов в плеерах версии 5.8.0 и выше:</span><br>
+                <a href="https://vk.com/@qsplayer-massivy-uzhe-ne-te" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"vk.com/Массивы уже не те"</span></a>
+                </li>
+                <li><span class="Monokai-Comment">! Статья о нововведениях в QSP 5.8.0 (с примерами из qSpider):</span><br>
+                <a href="https://vk.com/@qsplayer-novovvedeniya-v-qsp-580" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"vk.com/Нововведения в QSP 5.8.0"</span></a><br>
+                <a href="https://aleksversus.medium.com/нововведения-в-qsp-5-8-0-633e6eeb187e" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"medium.com/Нововведения в QSP 5.8.0"</span></a>
                 </li>
             </ul>
             <h6><span class="Monokai-Func">Мои ресурсы:</span></h6>
