Мелкие правки и тесты. Следующий этап - описание класса Секция.

--- a/pages/00000102.html
+++ b/pages/00000102.html
@@ -917,27 +917,25 @@
 </p>
 <ol>
 <li>
-Включите строку ввода:
-</li>
-</ol>
-<div class="Monokai-Code">
+    <p>Включите строку ввода:</p>
+    <div class="Monokai-Code">
 &nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Operator">showinput</span>&nbsp;<span class="Monokai-Numeric">1</span><br>
 
 
 </div>
-<ol>
-<li>
-Создайте действие:
 </li>
-</ol>
-<div class="Monokai-Code">
+
+<li>
+    <p>Создайте действие:</p>
+    <div class="Monokai-Code">
 &nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Koperator">act</span>&nbsp;<span class="Monokai-String">"Вывести&nbsp;текст&nbsp;из&nbsp;строки&nbsp;ввода"</span><span class="Monokai-Operator">:</span><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Operator">*pl</span>&nbsp;<span class="Monokai-Func">$user_text</span><br>
 &nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Koperator">end</span><br>
 
 
 </div>
-<ol>
+</li>
+
 <li>
 Теперь запустите игру, пробуйте вводить текст в поле ввода, а затем нажимать на действие. Текст из поля ввода будет появляться на экране.
 </li>
