Добавил конвертер HTML-кода.

--- a/pages/test-page.html
+++ b/pages/test-page.html
@@ -101,7 +101,49 @@
 <span class="Monokai-Markup">.intCur&nbsp;</span>{<span class="Monokai-Construct">cursor</span><span class="Monokai-Command">:</span><span class="Monokai-Numeric">&nbsp;url(путь&nbsp;к&nbsp;файлу&nbsp;курсора/cursor.ani)</span><span class="Monokai-Command">;</span>}
 
 
-</div>    
+</div>
+            <div class="Monokai-Code">
+
+<span class="Monokai-Markup">html,&nbsp;body&nbsp;</span>{&nbsp;<span class="Monokai-Construct">height</span><span class="Monokai-Command">:</span><span class="Monokai-Numeric">&nbsp;100%</span><span class="Monokai-Command">;</span>&nbsp;<span class="Monokai-Construct">margin</span><span class="Monokai-Command">:</span><span class="Monokai-Numeric">&nbsp;0px</span><span class="Monokai-Command">;</span>&nbsp;<span class="Monokai-Construct">padding</span><span class="Monokai-Command">:</span><span class="Monokai-Numeric">&nbsp;0px</span><span class="Monokai-Command">;</span>&nbsp;}
+
+
+</div>
+       
+            <div class="Monokai-Code">
+
+&lt;<span class="Monokai-TagName">html</span>&nbsp;<span class="Monokai-Markup">lang</span>=<span class="Monokai-String">"ru"</span>&gt;<br>
+
+&lt;<span class="Monokai-TagName">head</span>&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="Monokai-TagName">meta</span>&nbsp;<span class="Monokai-Markup">http-equiv</span>=<span class="Monokai-String">"content-type"</span>&nbsp;<span class="Monokai-Markup">content</span>=<span class="Monokai-String">"text/html;&nbsp;charset=utf-8"</span>&nbsp;/&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="Monokai-TagName">link</span>&nbsp;<span class="Monokai-Markup">id</span>=<span class="Monokai-String">"favicon"</span>&nbsp;<span class="Monokai-Markup">rel</span>=<span class="Monokai-String">"icon"</span>&nbsp;<span class="Monokai-Markup">type</span>=<span class="Monokai-String">"image/x-icon"</span>&nbsp;<span class="Monokai-Markup">href</span>=<span class="Monokai-String">"../res/favicon.ico"</span>&nbsp;/&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="Monokai-TagName">link</span>&nbsp;<span class="Monokai-Markup">type</span>=<span class="Monokai-String">"text/css"</span>&nbsp;<span class="Monokai-Markup">rel</span>=<span class="Monokai-String">"stylesheet"</span>&nbsp;<span class="Monokai-Markup">href</span>=<span class="Monokai-String">"../res/css/easy.library.css"</span>&nbsp;/&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="Monokai-TagName">link</span>&nbsp;<span class="Monokai-Markup">type</span>=<span class="Monokai-String">"text/css"</span>&nbsp;<span class="Monokai-Markup">rel</span>=<span class="Monokai-String">"stylesheet"</span>&nbsp;<span class="Monokai-Markup">href</span>=<span class="Monokai-String">"../res/css/offline.window.css"</span>&nbsp;/&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="Monokai-TagName">link</span>&nbsp;<span class="Monokai-Markup">type</span>=<span class="Monokai-String">"text/css"</span>&nbsp;<span class="Monokai-Markup">rel</span>=<span class="Monokai-String">"stylesheet"</span>&nbsp;<span class="Monokai-Markup">href</span>=<span class="Monokai-String">"../res/css/qsp_code.css"</span>&nbsp;/&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;<span class="Monokai-TagName">title</span>&gt;QSP:&nbsp;Как&nbsp;сделать?&lt;/<span class="Monokai-TagName">title</span>&gt;<br>
+
+&lt;/<span class="Monokai-TagName">head</span>&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;<br>
+
+<span class="Monokai-Comment">&lt;!--&nbsp;&lt;body&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;div&nbsp;class="em_Main"&gt;<br>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;div&nbsp;class="soderzhanije"&gt;&nbsp;--&gt;</span><br>
+
+&lt;<span class="Monokai-TagName">a</span>&nbsp;<span class="Monokai-Markup">id</span>=<span class="Monokai-String">"soderzhanije"</span>&gt;&lt;/<span class="Monokai-TagName">a</span>&gt;&lt;<span class="Monokai-TagName">h2</span>&gt;Содержание&lt;/<span class="Monokai-TagName">h2</span>&gt;&lt;<span class="Monokai-TagName">a</span>&nbsp;<span class="Monokai-Markup">id</span>=<span class="Monokai-String">"OZoC"</span>&gt;&lt;/<span class="Monokai-TagName">a</span>&gt;&lt;<span class="Monokai-TagName">h6</span>&gt;1.&nbsp;В&nbsp;чём&nbsp;разница?&lt;/<span class="Monokai-TagName">h6</span>&gt;&lt;<span class="Monokai-TagName">p</span>&gt;<br>
+
+1.1.&nbsp;&lt;<span class="Monokai-TagName">a</span>&nbsp;<span class="Monokai-Markup">href</span>=<span class="Monokai-String">"https://aleksversus.github.io/howdo_faq/pages/00000002.html#faq_01_01"</span>&nbsp;<span class="Monokai-Markup">style</span>=<span class="Monokai-String">"text-decoration:none;"</span>&nbsp;<span class="Monokai-Markup">class</span>=<span class="Monokai-String">"emFOLD"</span>&gt;В&nbsp;чём&nbsp;разница&nbsp;между&nbsp;&lt;<span class="Monokai-TagName">span</span>&nbsp;<span class="Monokai-Markup">class</span>=<span class="Monokai-String">"em_BLCK"</span>&gt;&lt;<span class="Monokai-TagName">span</span>&nbsp;<span class="Monokai-Markup">class</span>=<span class="Monokai-String">"emOPRT"</span>&gt;set&lt;/<span class="Monokai-TagName">span</span>&gt;&nbsp;x=10&lt;/<span class="Monokai-TagName">span</span>&gt;,&nbsp;&lt;<span class="Monokai-TagName">span</span>&nbsp;<span class="Monokai-Markup">class</span>=<span class="Monokai-String">"em_BLCK"</span>&gt;&lt;<span class="Monokai-TagName">span</span>&nbsp;<span class="Monokai-Markup">class</span>=<span class="Monokai-String">"emOPRT"</span>&gt;let&lt;/<span class="Monokai-TagName">span</span>&gt;&nbsp;x=10&lt;/<span class="Monokai-TagName">span</span>&gt;&nbsp;и&nbsp;&lt;<span class="Monokai-TagName">span</span>&nbsp;<span class="Monokai-Markup">class</span>=<span class="Monokai-String">"em_BLCK"</span>&gt;x=10&lt;/<span class="Monokai-TagName">span</span>&gt;?&lt;/<span class="Monokai-TagName">a</span>&gt;
+
+
+</div>
+            
             <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
                 Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
