--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         </div>
         <div class="em_btn">
             <div>
-                <a href="https://aleksversus.github.io/howdo_faq/">Главная</a>
+                <a href="https://aleksversus.github.io/howdo_faq/" class="emHREFTT">Главная</a>
             </div>
             <div>
-                <a href="https://aleksversus.github.io/howdo_faq/pages/00000001.html">Содержание</a>
+                <a href="https://aleksversus.github.io/howdo_faq/pages/00000001.html" class="emHREFTT">Содержание</a>
             </div>
         </div>
     </div>
