--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>Как только вы перейдёте к первой странице справочника, слева появится содержание со всеми разделами. Так же Содержание всегда доступно на отдельной странице по ссылке внизу.</p>
             <p>Если вы нашли какую-либо ошибку или неточность, просьба заскринить её вместе с адресом страницы и выслать мне на <span class="Monokai-UnFunc">aleksversus@mail.ru</span>. Это поможет улучшению и исправлению справочника.</p>
             <p>Ещё вы можете написать мне в VK, это не возбраняется: <a href="https://vk.com/id40090736" style="text-decoration: none;" target="_blank"><span class="Monokai-Numeric">id40090736</span></a>.</p>
-            <p>Подсветка блоков кода CSS, JS и HTML пока не сделана, код в этих блоках будет подсвечен неправильно. В остальном же всё должно работать.</p>
+            <p>Подсветка блоков кода JS пока не сделана, код в этих блоках будет подсвечен неправильно. В остальном же всё должно работать.</p>
             <h6><span class="Monokai-Func">Перейти к справочнику:</span></h6>
             <ul class="cmd">
                 <li>
