Добавлены статьи по QSP

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 </li>
                 <li><span class="Monokai-Comment">! Статья о преобразовании типов в QSP:</span><br>
                 <a href="https://vk.com/@qsplayer-preobrazovanie-tipov-v-qsp" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"vk.com/Преобразование типов в QSP"</span></a><br>
-                <a href="https://aleksversus.medium.com/преобразование-типов-в-qsp-8eec585f93e2" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"medium.com/Преобразование типов в QSP"</span></a>
+                <a href="https://aleksversus.medium.com/преобразование-типов-в-qsp-8eec585f93e2" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"medium.com/Преобразование типов в QSP"</span></a><br>
+                <a href="https://aleksversus.github.io/howdo_faq/articles/00000000.html" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">jump</span> <span class="Monokai-String">"Преобразование типов в QSP"</span></a>
                 </li>
                 <li><span class="Monokai-Comment">! Статья об изменении работы массивов в плеерах версии 5.8.0 и выше:</span><br>
                 <a href="https://vk.com/@qsplayer-massivy-uzhe-ne-te" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"vk.com/Массивы уже не те"</span></a>
