фикс главной страницы

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="em_Main">
     <div class="em_AROUND">
         <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="http://qsp.su/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
-        <div class="Monokai-Code" style="min-height:480px;">
+        <div class="Monokai-Code" style="min-height:480px;white-space: normal;">
             <p>Добро пожаловать в онлайн-версию <span class="Monokai-String">Справочника по самым часто задаваемым вопросам из темы "Как сделать?" на форуме QSP.su</span>. Редакция от 03.11.2021.</p>
             <p>За исключением данной страницы весь справочник генерируется из исходников, поэтому возможны огрехи и разные некрасивости. По мере необходимости и возможности я буду эти огрехи устранять.</p>
             <p>Скачать последнюю версию офлайн-справочника вы всегда можете со страницы релизов:</p>
