--- a/готовые статьи/add/02_start.html
+++ b/готовые статьи/add/02_start.html
@@ -6,6 +6,8 @@
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
+    <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
+    <script src="../res/js/stamp.js"></script>
     <title>QSP: Статьи</title>
 </head>
     
