--- a/готовые статьи/add/03_end.html
+++ b/готовые статьи/add/03_end.html
@@ -1,8 +1,8 @@
 <!-- body end -->
             <div class="em_Epigraph">
                 <div class="em_subText">
-                    <p>Aleks Versus'HowDo-F.A.Q.'2013-2021</p>
-                    <p>Aleks Versus'Game Adventure Making'Really Unimaginable Stories'2013-<span id="date_stamp">2021</span></p>
+                    <p>Aleks Versus'HowDo-F.A.Q.'2021-<span id="date_stamp_faq">2022</span></p>
+                    <p>Aleks Versus'Game Adventure Making'Really Unimaginable Stories'2013-<span id="date_stamp_gamrus">2022</span></p>
                 </div>
             </div>
             <div class="em_btn">
@@ -18,5 +18,6 @@
             &nbsp;
         </div>
     </div>
+    <script src="../res/js/stamp.js"></script>
 </body>
 </html>
