Мелкие правки и ссылка на статью

--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
                             <a href="https://aleksversus.github.io/howdo_faq/articles/00000003.html" style="text-decoration: none;"><span class="Monokai-Operator">jump</span> <span class="Monokai-String">"Нововведения в QSP 5.8.0"</span></a>
                         </li>
                     </ul>
+                <span class="Monokai-Comment">! Сводная статья о qSpider v.0.12.0:</span>
+                    <ul class="cmd">
+                        <li>
+                            <a href="https://vk.com/@qsplayer-qspider-v-0120-svodnaya-statya" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"vk.com/qSpider v.0.12.0"</span></a>
+                        </li>
+                        <li>
+                            <a href="https://aleksversus.medium.com/qspider-v-0-12-0-сводная-статья-1d76af7d4f27" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"medium.com/qSpider v.0.12.0"</span></a>
+                        </li>
+                        <li>
+                            <a href="https://aleksversus.github.io/howdo_faq/articles/00000004.html" style="text-decoration: none;"><span class="Monokai-Operator">jump</span> <span class="Monokai-String">"qSpider v.0.12.0"</span></a>
+                        </li>
+                    </ul>
                 
             
             <h6><span class="Monokai-Func">Мои ресурсы:</span></h6>
