qsp.su -> qsp.org

--- a/[source]/ответы/92_дополнительные тексты/02_start.html
+++ b/[source]/ответы/92_дополнительные тексты/02_start.html
@@ -15,5 +15,5 @@
 <header-header></header-header>
         </div>
         <div class="em_AROUND">
-            <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="http://qsp.su/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="http://qsp.su/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
+            <h1>Онлайн-справочник по самым часто задаваемым вопросам из темы "<a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&Itemid=57">Как сделать?</a>" на форуме <a href="https://qsp.org/index.php?option=com_agora&Itemid=57" title="перейти на форум" target="_blank">QSP.su</a></h1>
             <!-- body start -->
