В порядке эксперимента переконверчен блок статей

--- a/[source]/готовые статьи/add/03_end.html
+++ b/[source]/готовые статьи/add/03_end.html
@@ -10,7 +10,7 @@
                     <a href="https://aleksversus.github.io/howdo_faq/" class="emHREFTT">Главная</a>
                 </div>
                 <div>
-                    <a href="https://aleksversus.github.io/howdo_faq/articles/00000000.html" class="emHREFTT">Содержание</a>
+                    <a href="#" class="emHREFTT" id="section_content_open">Содержание</a>
                 </div>
             </div>
         </div>
@@ -18,6 +18,12 @@
             &nbsp;
         </div>
     </div>
+    <div id="soderzhanije_outer">
+        <div class="soderzhanije">
+<header-header></header-header>
+        </div>
+    </div>
     <script src="../res/js/stamp.js"></script>
+    <script type="text/javascript" src="../res/js/soderzhanie.js" ></script>
 </body>
 </html>
