--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </li>
                     </ul>
                 <span class="Monokai-Comment">! Скачать последнюю версию офлайн-справочника вы всегда можете со страницы релизов:</span>
-            <ul>
+            <ul class="cmd">
                 <li><a href="https://github.com/AleksVersus/howdo_faq/releases" style="text-decoration: none;" target="_blank"><span class="Monokai-Operator">goto</span> <span class="Monokai-String">"GitHub/HowDo_FAQ/releases"</span></a> (Редакция от 03.11.2021.)</li>
             </ul>
             <h6><span class="Monokai-Func">Статьи по QSP:</span></h6>  
