--- a/informarch/faq_po_qsp_0001.html
+++ b/informarch/faq_po_qsp_0001.html
@@ -208,7 +208,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 
 </p>
 <p>
-Самый примитивный вариант зацикливания представлен в справочнике по самым часто задаваемым вопросам из темы "Как сделать?": <a href="https://aleksversus.github.io/howdo_faq/pages/00000034.html#faq_06_06" style="text-decoration:none;" class="emFOLD">Как зациклить мелодию</a>.
+Самый примитивный вариант зацикливания представлен в справочнике по самым часто задаваемым вопросам из темы "Как сделать?": <a href="https://aleksversus.github.io/howdo_faq/pages/kak_zatsiklit__melodiju_0034.html#faq_06_06" style="text-decoration:none;" class="emFOLD">Как зациклить мелодию</a>.
 
 </p>
 <p>
@@ -221,7 +221,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 </p>
 <a id="иТWх"></a><h4>Как сделать "считаемые" предметы, например, "патроны: 50 шт."?</h4>
 <p>
-А вот это вопрос довольно простой. Понятное и очевидное решение изложено в статье <a href="https://aleksversus.github.io/howdo_faq/pages/00000092.html#faq_14_06" style="text-decoration:none;" class="emFOLD">"Как сделать считаемые предметы?"</a> в справочнике по самым часто задаваемым вопросам из темы "Как сделать?".
+А вот это вопрос довольно простой. Понятное и очевидное решение изложено в статье <a href="https://aleksversus.github.io/howdo_faq/pages/kak_delat__schitaeye_predmety_0093.html#faq_14_06" style="text-decoration:none;" class="emFOLD">"Как сделать считаемые предметы?"</a> в справочнике по самым часто задаваемым вопросам из темы "Как сделать?".
 
 </p>
 <p>
@@ -262,7 +262,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 </div>
 <a id="ЮjсИ"></a><h4>Как сделать действие, которое появляется при выполнении определенного условия?</h4>
 <p>
-Этот вопрос был рассмотрен множество раз в различных вариациях. Можете ознакомиться с соответствующей <a href="https://aleksversus.github.io/howdo_faq/pages/00000064.html#faq_11_02" style="text-decoration:none;" class="emFOLD">статьёй</a> в справочнике по самым часто задаваемым вопросам из темы
+Этот вопрос был рассмотрен множество раз в различных вариациях. Можете ознакомиться с соответствующей <a href="https://aleksversus.github.io/howdo_faq/pages/dejstvie_po_usloviju_0065.html#faq_11_02" style="text-decoration:none;" class="emFOLD">статьёй</a> в справочнике по самым часто задаваемым вопросам из темы
 
 </p>
 <p>
@@ -279,7 +279,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 
 </p>
 <p>
-<a href="https://aleksversus.github.io/howdo_faq/pages/00000043.html#faq_09_01" style="text-decoration:none;" class="emFOLD">Краткая статья с наиболее распространёнными примерами вывода изображения</a> есть в справочнике по самым часто задаваемым вопросам из темы "Как сделать?" на форуме <a href="https://qsp.org" style="text-decoration:none;" class="emFOLD">qsp.org</a>.
+<a href="https://aleksversus.github.io/howdo_faq/pages/kak_vstavit__kartinku_v_igru_0044.html#faq_09_01" style="text-decoration:none;" class="emFOLD">Краткая статья с наиболее распространёнными примерами вывода изображения</a> есть в справочнике по самым часто задаваемым вопросам из темы "Как сделать?" на форуме <a href="https://qsp.org" style="text-decoration:none;" class="emFOLD">qsp.org</a>.
 
 </p>
 <a id="йRFУ"></a><h4>Какие ограничения есть в QSP?</h4>
@@ -362,7 +362,7 @@ qsp.dll, txt2gam, AeroQSP, справка - <a href="https://github.com/QSPFound
 
 </div>
 <p>
-Более подробный ответ на этот вопрос в статье <a href="https://aleksversus.github.io/howdo_faq/pages/00000132.html#faq_20_01" style="text-decoration:none;" class="emFOLD">"Как сделать возврат на предыдущую локацию?"</a>.
+Более подробный ответ на этот вопрос в статье <a href="https://aleksversus.github.io/howdo_faq/pages/vozvrat_na_predyduschuju_lokatsiju_0133.html#faq_20_01" style="text-decoration:none;" class="emFOLD">"Как сделать возврат на предыдущую локацию?"</a>.
 
 </p>
 <p>
@@ -409,7 +409,7 @@ $somecode<span class="Monokai-Operator">=</span><span class="Monokai-Operator">{
 
 </p>
 <p>
-Подробнее можно прочесть здесь: <a href="https://aleksversus.github.io/howdo_faq/pages/00000177.html#faq_80_05_curclybrackets" style="text-decoration:none;" class="emFOLD">"Фигурные скобки"</a>
+Подробнее можно прочесть здесь: <a href="https://aleksversus.github.io/howdo_faq/pages/qsp-keyword_0179.html#faq_80_05_curclybrackets" style="text-decoration:none;" class="emFOLD">"Фигурные скобки"</a>
 
 </p>
 <a id="вВчД"></a><h4>Модуль Олегуса для работы с таблицами данных</h4>
@@ -532,7 +532,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 
 </p>
 <p>
-Плавное изменение цвета фона аналогично по своему решению задаче по плавному проявлению текста: <a href="https://aleksversus.github.io/howdo_faq/pages/00000060.html#faq_10_10" style="text-decoration:none;" class="emFOLD">Плавное появление текста</a>
+Плавное изменение цвета фона аналогично по своему решению задаче по плавному проявлению текста: <a href="https://aleksversus.github.io/howdo_faq/pages/plavnoe_pojavlenie_0061.html#faq_10_10" style="text-decoration:none;" class="emFOLD">Плавное появление текста</a>
 
 </p>
 <a id="UUEё"></a><h4>Мини-игра "Взорви зомби" - пример использования локации-счётчика, также см. Действие по таймеру</h4>
@@ -558,7 +558,7 @@ Olegus t.Gl. написал для QSP модуль работы с такими
 </p>
 <a id="ъПАN"></a><h4>Настройка окошек классического плеера с помощью qspgui.cfg</h4>
 <p>
-Подробную, но не полную, информацию по настройке окон классического плеера вы можете найти в статье <a href="https://aleksversus.github.io/howdo_faq/articles/00000005.html#classic_cfg" style="text-decoration:none;" class="emFOLD">Структура конфигурационного файла классического плеера версии 5.7.0</a>
+Подробную, но не полную, информацию по настройке окон классического плеера вы можете найти в статье <a href="https://aleksversus.github.io/howdo_faq/articles/classic.config_0005.html#classic_cfg" style="text-decoration:none;" class="emFOLD">Структура конфигурационного файла классического плеера версии 5.7.0</a>
 
 </p>
 <p>
